src/test/ui/parser/issue-41155.stderr
error: expected one of `(`, `async`, `const`, `default`, `extern`, `fn`, `type`, or `unsafe`, found `}`
  --> $DIR/issue-41155.rs:5:1
   |
LL |     pub
   |        - expected one of 8 possible tokens here
LL | }
   | ^ unexpected token

error: aborting due to previous error

